Add scroll animations and update social media links

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@ permalink: //
 
 <div id="index-about">
   <div id="index-mountains">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div class="animation-element"></div>
+    <div class="animation-element"></div>
+    <div class="animation-element"></div>
+    <div class="animation-element"></div>
   </div>
   I'm a passionate student who currently resides in beautiful Boulder, Colorado.
   I seek to combine my skills in coding, art, and copywriting to help my clients
