Add website gallery

--- a/index.html
+++ b/index.html
@@ -28,15 +28,25 @@ permalink: //
 
 <div class="gallery-x">
   <div class="gallery-row">
-    <div id="index-angies" class="gallery-item">
+    <div class="gallery-ogb gallery-item">
       <div class="gallery-item-slide">
-        Website and branding for Angie's Probiotic Kitchen
+        <p>
+          Logo, graphics, and website for Operation Give Back: A student
+          volunteer match site
+        </p>
+        <a href="">See More</a>
       </div>
     </div>
-    <div id="index-art" class="gallery-item"></div>
-    <div id="index-fhs" class="gallery-item">
+    <div class="gallery-just-tangerine-2017 gallery-item">
       <div class="gallery-item-slide">
-        Responsive website for Fairview High School
+        <p>Website for Just Tangerine (2017)</p>
+        <a href="">See More</a>
+      </div>
+    </div>
+    <div class="gallery-solisles gallery-item">
+      <div class="gallery-item-slide">
+        <p>Art, features, and content for virtual pet site Solisles</p>
+        <a href="">See More</a>
       </div>
     </div>
   </div>
