Structure about page

--- a/about.html
+++ b/about.html
@@ -4,4 +4,57 @@ title: About
 permalink: /about/
 ---
 
-Hi there!
+<div id="about">
+
+<h1>About Gernene</h1>
+
+<p>
+  Hi there! My name is Gernene Tan. You may also recognize me as Hwona (my pen
+  name). I'm a high school junior who's looking to study web design, cyber
+  security, and computer science. I started creating websites and digital art
+  seven years ago - and I have to say that I love what I do!
+</p>
+
+<p>
+  As a young girl, I was fascinated by the idea of utilizing code to add
+  a whole new layer of depth and interaction to my artistic creations. I have
+  since worked with HTML/CSS, PHP and MySQL, Javascript, Ruby on Rails, Python,
+  and Java - Not to mention that I continue to learn more! My various projects
+  range from simple static pages to full-blown ecommerce sites, giving me a wide
+  range of experience with different programming languages, tools, and platforms.
+</p>
+
+<p>
+  Today, my goal is to develop my design, technical, and business skillsets to
+  maximize the quality of my work and the efficiency of my service. A learning
+  student, I'm always on the lookout for new opportunities that pass my way. Do
+  take a look around my portfolio and ask any questions...
+</p>
+
+<p>And remember me when you hunt for your next web designer!</p>
+
+</div>
+
+<div id="about-definitions">
+
+  <div class="flex-child">
+    <h2>Tan, Gernene</h2>
+    <p>tan&middot;ger&middot;nine</p>
+    <p>/&#716;tanj&#601;&#712;rn&#275;n/</p>
+    <i>noun</i>
+    <ol>
+      <li>an organism that turns tangerines into code, art, and English</li>
+    </ol>
+  </div>
+
+  <div class="flex-child">
+    <h2>tangerine</h2>
+    <p>tan&middot;ge&middot;rine</p>
+    <p>/&#716;tanj&#601;&#712;r&#275;n/</p>
+    <i>noun</i>
+    <ol>
+      <li>a small citrus fruit with loose skin</li>
+    </ol>
+  </div>
+
+</div>
