Flesh out web project pages

--- a/art.html
+++ b/art.html
@@ -40,56 +40,47 @@ permalink: /art/
 
   <div class="gallery-viewer-item-creature-mask gallery-viewer-item">
     <img src="{{ site.url }}/img/art/CreatureMask.png">
-    <h2>Rainbow Wallie Painting</h2>
-    <p>Hello</p>
+    <h2>Creature Mask</h2>
   </div>
 
   <div class="gallery-viewer-item-fire-dance gallery-viewer-item">
     <img src="{{ site.url }}/img/art/FireDance.png">
-    <h2>Rainbow Wallie Painting</h2>
-    <p>Hello</p>
+    <h2>Fire Dance</h2>
   </div>
 
   <div class="gallery-viewer-item-hwona gallery-viewer-item">
     <img src="{{ site.url }}/img/art/Hwona.png">
-    <h2>Rainbow Wallie Painting</h2>
-    <p>Hello</p>
+    <h2>Hwona</h2>
   </div>
 
   <div class="gallery-viewer-item-just-tangerine-logo-2016 gallery-viewer-item">
     <img src="{{ site.url }}/img/art/JustTangerineLogo2016.png">
-    <h2>Rainbow Wallie Painting</h2>
-    <p>Hello</p>
+    <h2>Just Tangerine Logo (2016)</h2>
   </div>
 
   <div class="gallery-viewer-item-dawn-of-keilien gallery-viewer-item">
     <img src="{{ site.url }}/img/art/DawnoftheKeilien.png">
-    <h2>Rainbow Wallie Painting</h2>
-    <p>Hello</p>
+    <h2>Dawn of the Keilien</h2>
   </div>
 
   <div class="gallery-viewer-item-bride-of-blooms gallery-viewer-item">
     <img src="{{ site.url }}/img/art/BrideofBlooms.png">
-    <h2>Rainbow Wallie Painting</h2>
-    <p>Hello</p>
+    <h2>Bride of Blooms</h2>
   </div>
 
   <div class="gallery-viewer-item-paradise-whemzel gallery-viewer-item">
     <img src="{{ site.url }}/img/art/ParadiseWhemzelPainting.png">
-    <h2>Rainbow Wallie Painting</h2>
-    <p>Hello</p>
+    <h2>Paradise Painting</h2>
   </div>
 
   <div class="gallery-viewer-item-rainbow-wallie gallery-viewer-item">
     <img src="{{ site.url }}/img/art/RainbowWalliePainting.png">
     <h2>Rainbow Wallie Painting</h2>
-    <p>Hello</p>
   </div>
 
   <div class="gallery-viewer-item-wallie gallery-viewer-item">
     <img src="{{ site.url }}/img/art/Wallie.png">
     <h2>Wallie</h2>
-    <p>Hello</p>
   </div>
 
 </div>
