--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@ permalink: //
           Logo, graphics, and website for Operation Give Back: A student
           volunteer match site
         </p>
-        <a href="">See More</a>
+        <a href="{{ site.url }}/web/ogb">See More</a>
       </div>
     </div>
     <div class="gallery-just-tangerine-2017 gallery-item">
       <div class="gallery-item-slide">
         <p>Website for Just Tangerine (2017)</p>
-        <a href="">See More</a>
+        <a href="{{ site.url }}/web/gallery-just-tangerine-2017">See More</a>
       </div>
     </div>
     <div class="gallery-solisles gallery-item">
       <div class="gallery-item-slide">
         <p>Art, features, and content for virtual pet site Solisles</p>
-        <a href="">See More</a>
+        <a href="{{ site.url }}/web/solisles">See More</a>
       </div>
     </div>
   </div>
