--- a/web.html
+++ b/web.html
@@ -8,7 +8,7 @@ permalink: /web/
 
 <div class="gallery-x">
 
-  <div class="gallery-row">
+  <div class="gallery-row" style="display: none;">
     <div class="gallery-journal-supplies-co gallery-item">
       <div class="gallery-item-slide">
         <p>Ecommerce website for stationery vendor Journal Supplies Co</p>
@@ -27,19 +27,19 @@ permalink: /web/
     <div class="gallery-gernene-2018 gallery-item">
       <div class="gallery-item-slide">
         <p>Portfolio 2018</p>
-        <a href="">See More</a>
+        <a href="{{ site.url }}/web/gernene-2018">See More</a>
       </div>
     </div>
     <div class="gallery-just-tangerine-2017 gallery-item">
       <div class="gallery-item-slide">
         <p>Website for Just Tangerine (2017)</p>
-        <a href="">See More</a>
+        <a href="{{ site.url }}/web/just-tangerine-2017">See More</a>
       </div>
     </div>
     <div class="gallery-fhsgwc gallery-item">
       <div class="gallery-item-slide">
         <p>Informational website for Fairview High School's Girls Who Code club</p>
-        <a href="">See More</a>
+        <a href="{{ site.url }}/web/fhsgwc">See More</a>
       </div>
     </div>
   </div>
@@ -51,19 +51,19 @@ permalink: /web/
           Logo, graphics, and website for Operation Give Back: A student
           volunteer match site
         </p>
-        <a href="">See More</a>
+        <a href="{{ site.url }}/web/ogb">See More</a>
       </div>
     </div>
     <div class="gallery-just-tangerine-2016 gallery-item">
       <div class="gallery-item-slide">
         <p>Website for Just Tangerine (2016)</p>
-        <a href="">See More</a>
+        <a href="{{ site.url }}/web/just-tangerine-2016">See More</a>
       </div>
     </div>
     <div class="gallery-solisles gallery-item">
       <div class="gallery-item-slide">
         <p>Art, features, and content for virtual pet site Solisles</p>
-        <a href="">See More</a>
+        <a href="{{ site.url }}/web/solisles">See More</a>
       </div>
     </div>
   </div>
