--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,9 @@ permalink: /resume/
 
 <h1>
   <span>Gernene Tan</span>
-  <i class="fa fa-print"></i>
+  <a href="{{ site.url }}/resume.pdf" target="_blank">
+    <i class="fa fa-print"></i>
+  </a>
 </h1>
 
 <p>4955 Twin Lakes Rd. #53, Boulder, Colorado 80301 | 303-946-5636 | gernenetan@gmail.com</p>
