--- a/web/ogb.html
+++ b/web/ogb.html
@@ -28,7 +28,7 @@ permalink: /web/ogb/
 </p>
 
 <img src="{{ site.url }}/img/web/ogb-home.jpg">
-<img src="{{ site.url }}/img/web/OGBSearch.png">
-<img src="{{ site.url }}/img/web/OGBPost.png">
+<img src="{{ site.url }}/img/web/ogb-search.jpg">
+<img src="{{ site.url }}/img/web/ogb-post.jpg">
 
 </div>
