--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@ permalink: /resume/
   </a>
 </h1>
 
-<p>4955 Twin Lakes Rd. #53, Boulder, Colorado 80301 | 303-946-5636 | gernenetan@gmail.com</p>
+<p>gernenetan@gmail.com</p>
 
 <p>
   Hardworking and passionate student with a knack for learning new things.
