--- a/web/just-tangerine-2017.html
+++ b/web/just-tangerine-2017.html
@@ -13,14 +13,12 @@ permalink: /web/just-tangerine-2017/
   <div id="web-top-info">
     <p>
       I experimented with simple animations and minimalist design to give Just
-      Tangerine a new and elegant look.
+      Tangerine a new and elegant look. The site will be undergoing a content
+      overhaul.
     </p>
   </div>
 </div>
 
-<p>
-  I repurposed Just Tangerine (my former portfolio) as an experimental site for
-  new features, designs, and branding.
-</p>
+<img src="{{ site.url }}/img/web/just-tangerine-2017-home.jpg">
 
 </div>
