Add alt tags to images

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ permalink: //
 <div id="intro">
   <div id="intro-left">
     <div id="intro-greet">
-      <img id="intro-logo" src="{{ site.url }}/img/TangerineLogo.svg">
+      <img id="intro-logo" src="{{ site.url }}/img/TangerineLogo.svg" alt="Gernene's Tangerine Logo">
       <div id="intro-hello">
         <div id="intro-hi">Hello!</div>
         <div id="intro-am">I am</div>
