--- a/web/gernene-2018.html
+++ b/web/gernene-2018.html
@@ -9,7 +9,7 @@ permalink: /web/gernene-2018/
 <h1>Portfolio 2018</h1>
 
 <div id="web-top">
-  <img id="monitors" src="{{ site.url }}/img/web/gernene-2018-monitors.png">
+  <img id="monitors" src="{{ site.url }}/img/web/gernene-2018-monitors.png" alt="Gernene 2018 Previews">
   <div id="web-top-info">
     <p>
       My new portfolio focuses heavily on branding, intuitive navigation, and
