--- a/web/just-tangerine-2017.html
+++ b/web/just-tangerine-2017.html
@@ -9,7 +9,7 @@ permalink: /web/just-tangerine-2017/
 <h1>Just Tangerine 2017</h1>
 
 <div id="web-top">
-  <img id="monitors" src="{{ site.url }}/img/web/just-tangerine-2017-monitors.png">
+  <img id="monitors" src="{{ site.url }}/img/web/just-tangerine-2017-monitors.png" alt="Just Tangerine 2017 Previews">
   <div id="web-top-info">
     <p>
       I experimented with simple animations and minimalist design to give Just
@@ -19,6 +19,6 @@ permalink: /web/just-tangerine-2017/
   </div>
 </div>
 
-<img src="{{ site.url }}/img/web/just-tangerine-2017-home.jpg">
+<img src="{{ site.url }}/img/web/just-tangerine-2017-home.jpg" alt="Just Tangerine 2017 Home">
 
 </div>
