--- a/web/ogb.html
+++ b/web/ogb.html
@@ -9,7 +9,7 @@ permalink: /web/ogb/
 <h1>Operation Give Back</h1>
 
 <div id="web-top">
-  <img id="monitors" src="{{ site.url }}/img/web/ogb-monitors.png">
+  <img id="monitors" src="{{ site.url }}/img/web/ogb-monitors.png" alt="Operation Give Back Previews">
   <div id="web-top-info">
     <p>
       Operation Give Back is a volunteer match site catered to students. This
@@ -26,8 +26,8 @@ permalink: /web/ogb/
   and appealing design within a tight schedule.
 </p>
 
-<img src="{{ site.url }}/img/web/ogb-home.jpg">
-<img src="{{ site.url }}/img/web/ogb-search.jpg">
-<img src="{{ site.url }}/img/web/ogb-post.jpg">
+<img src="{{ site.url }}/img/web/ogb-home.jpg" alt="Operation Give Back Home">
+<img src="{{ site.url }}/img/web/ogb-search.jpg" alt="Operation Give Back Search">
+<img src="{{ site.url }}/img/web/ogb-post.jpg" alt="Operation Give Back Post">
 
 </div>
