--- a/web/solisles.html
+++ b/web/solisles.html
@@ -9,7 +9,7 @@ permalink: /web/solisles/
 <h1>Solisles</h1>
 
 <div id="web-top">
-  <img id="monitors" src="{{ site.url }}/img/web/solisles-monitors.png">
+  <img id="monitors" src="{{ site.url }}/img/web/solisles-monitors.png" alt="Solisles Previews">
   <div id="web-top-info">
     <p>
       Solisles is a virtual pet site that aims to combine elements of traditional
@@ -35,11 +35,11 @@ permalink: /web/solisles/
   course of the project continues to influence my work and design philosophy.
 </p>
 
-<img src="{{ site.url }}/img/web/solisles-home.jpg">
-<img src="{{ site.url }}/img/web/solisles-mimu-pantry.jpg">
-<img src="{{ site.url }}/img/web/solisles-mimu-nest.jpg">
-<img src="{{ site.url }}/img/web/solisles-creature.jpg">
-<img src="{{ site.url }}/img/web/solisles-daycare.jpg">
+<img src="{{ site.url }}/img/web/solisles-home.jpg" alt="Solisles Home">
+<img src="{{ site.url }}/img/web/solisles-mimu-pantry.jpg" alt="Solisles Mimu Pantry">
+<img src="{{ site.url }}/img/web/solisles-mimu-nest.jpg" alt="Solisles Mimu Nest">
+<img src="{{ site.url }}/img/web/solisles-creature.jpg" alt="Solisles Creature Page">
+<img src="{{ site.url }}/img/web/solisles-daycare.jpg" alt="Solisles Daycare">
 </div>
 
 </div>
