--- a/web/just-tangerine-2016.html
+++ b/web/just-tangerine-2016.html
@@ -13,10 +13,8 @@ permalink: /web/just-tangerine-2016/
   portfolio featured custom galleries and a blog to showcase my work.
 </p>
 
-<img src="{{ site.url }}/img/web/just-tangerine-2016-home.jpg">
-
-<img src="{{ site.url }}/img/web/just-tangerine-2016-about.jpg">
-
-<img src="{{ site.url }}/img/web/just-tangerine-2016-art.jpg">
+<img src="{{ site.url }}/img/web/just-tangerine-2016-home.jpg" alt="Just Tangerine 2016 Home">
+<img src="{{ site.url }}/img/web/just-tangerine-2016-about.jpg" alt="Just Tangerine 2017 About">
+<img src="{{ site.url }}/img/web/just-tangerine-2016-art.jpg" alt="Just Tangerine 2017 Art">
 
 </div>
