--- a/art.html
+++ b/art.html
@@ -39,47 +39,47 @@ permalink: /art/
   </div>
 
   <div class="gallery-viewer-item-creature-mask gallery-viewer-item">
-    <img src="{{ site.url }}/img/art/CreatureMask.png" alt="Creature Mask">
+    <img src="{{ site.url }}/img/art/large/creature-mask.jpg" alt="Creature Mask">
     <h2>Creature Mask</h2>
   </div>
 
   <div class="gallery-viewer-item-fire-dance gallery-viewer-item">
-    <img src="{{ site.url }}/img/art/FireDance.png" alt="Fire Dance">
+    <img src="{{ site.url }}/img/art/large/fire-dance.jpg" alt="Fire Dance">
     <h2>Fire Dance</h2>
   </div>
 
   <div class="gallery-viewer-item-hwona gallery-viewer-item">
-    <img src="{{ site.url }}/img/art/Hwona.png" alt="Hwona">
+    <img src="{{ site.url }}/img/art/large/hwona.jpg" alt="Hwona">
     <h2>Hwona</h2>
   </div>
 
   <div class="gallery-viewer-item-just-tangerine-logo-2016 gallery-viewer-item">
-    <img src="{{ site.url }}/img/art/JustTangerineLogo2016.png" alt="Just Tangerine 2016 Logo">
+    <img src="{{ site.url }}/img/art/large/just-tangerine-2016-logo.jpg" alt="Just Tangerine 2016 Logo">
     <h2>Just Tangerine Logo (2016)</h2>
   </div>
 
   <div class="gallery-viewer-item-dawn-of-keilien gallery-viewer-item">
-    <img src="{{ site.url }}/img/art/DawnoftheKeilien.png" alt="Dawn of the Keilien">
+    <img src="{{ site.url }}/img/art/large/dawn-of-the-keilien.jpg" alt="Dawn of the Keilien">
     <h2>Dawn of the Keilien</h2>
   </div>
 
   <div class="gallery-viewer-item-bride-of-blooms gallery-viewer-item">
-    <img src="{{ site.url }}/img/art/BrideofBlooms.png" alt="Bride of Blooms">
+    <img src="{{ site.url }}/img/art/large/bride-of-blooms.jpg" alt="Bride of Blooms">
     <h2>Bride of Blooms</h2>
   </div>
 
   <div class="gallery-viewer-item-paradise-whemzel gallery-viewer-item">
-    <img src="{{ site.url }}/img/art/ParadiseWhemzelPainting.png" alt="Paradise Whemzel Painting">
+    <img src="{{ site.url }}/img/art/large/paradise-whemzel-painting.jpg" alt="Paradise Whemzel Painting">
     <h2>Paradise Whemzel Painting</h2>
   </div>
 
   <div class="gallery-viewer-item-rainbow-wallie gallery-viewer-item">
-    <img src="{{ site.url }}/img/art/RainbowWalliePainting.png" alt="Rainbow Wallie Painting">
+    <img src="{{ site.url }}/img/art/large/rainbow-wallie-painting.jpg" alt="Rainbow Wallie Painting">
     <h2>Rainbow Wallie Painting</h2>
   </div>
 
   <div class="gallery-viewer-item-wallie gallery-viewer-item">
-    <img src="{{ site.url }}/img/art/Wallie.png" alt="Wallie">
+    <img src="{{ site.url }}/img/art/large/wallie.jpg" alt="Wallie">
     <h2>Wallie</h2>
   </div>
 
