--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@ layout: default
 permalink: //
 ---
 
-<div id="index-stripe1"></div>
-<div id="index-stripe2"></div>
-<div id="index-stripe3"></div>
 
 <div id="intro">
+  <div id="index-bubble1"></div>
+  <div id="index-bubble2"></div>
+  <div id="index-bubble3"></div>
   <div id="intro-left">
     <div id="intro-greet">
-      <img id="intro-logo" src="{{ site.url }}/img/TangerineLogo.svg" alt="Gernene's Tangerine Logo">
+      <img id="intro-logo" src="{{ site.url }}/img/TangerineLogo.png" alt="Gernene's Tangerine Logo">
       <div id="intro-hello">
         <div id="intro-hi">Hello!</div>
         <div id="intro-am">I am</div>
