--- a/about.html
+++ b/about.html
@@ -10,9 +10,8 @@ permalink: /about/
 
 <p>
   Hi there! My name is Gernene Tan. You may also recognize me as Hwona (my pen
-  name). I'm a high school junior who's looking to study web design, cyber
-  security, and computer science. I started creating websites and digital art
-  seven years ago - and I have to say that I love what I do!
+  name). I combine computer science with aesthetic appeal to create innovative 
+  projects and solutions.
 </p>
 
 <p>
