--- a/resume.html
+++ b/resume.html
@@ -27,8 +27,16 @@ permalink: /resume/
   <a href="https://fairviewhs.org">fairviewhs.org</a>
 </h3>
 <ul>
-  <li>Junior leader</li>
-  <li>Currently leading top-down responsive redesign</li>
+  <li>2 year leader</li>
+  <li>Currently leading top-down responsive redesign and full content restructure</li>
+</ul>
+
+<h3>
+  Fairview Robotics (FRC Team)
+</h3>
+<ul>
+  <li>Programmer</li>
+  <li>Media Captain</li>
 </ul>
 
 <h3>Fairview Girls Who Code</h3>
@@ -39,21 +47,10 @@ permalink: /resume/
   <li>Created responsive and mobile-friendly layout using Bootstrap</li>
 </ul>
 <h4>
-  Fairview Girls Who Code Site:
-  <a href="https://fairviewgwc.herokuapp.com">fairviewgwc.herokuapp.com</a>
+  Fairview Girls Who Code Site
 </h4><ul>
   <li>Informational site to promote membership and participation</li>
   <li>Responsive design</li>
-</ul>
-
-<h3>
-  Just Tangerine & Personal Portfolio:
-  <a href="https://just-tangerine.com">just-tangerine.com</a> &
-  <a href="http://gernene.com">gernene.com</a>
-</h3>
-<ul>
-  <li>First completely self-coded personal sites</li>
-  <li>Specially customized to showcase my work</li>
 </ul>
 
 <h3>
@@ -66,14 +63,22 @@ permalink: /resume/
   <li>A concoction of original ideas, cute animated graphics, and lots of code</li>
 </ul>
 
+<h3>
+  Freelance Full-stack Development
+</h3>
+<ul>
+  <li>NodeJS, Ruby on Rails, PHP, JavaScript, Python, HTML, CSS</li>
+  <li>Ecommerce web apps, games, static info sites</li>
+</ul>
+
 
 <h2>Education</h2>
 <p>
   Fairview High School, Boulder, CO<br>
-  Junior
+  Senior
 </p>
 <ul>
-  <li>Relevant Courses: AP Computer Science, IB Computer Science</li>
+  <li>Relevant Courses: AP Computer Science, IB Computer Science HL</li>
   <li>
     Relevant Clubs: Code Club, Robotics, Technology Student Association, Girls
     Who Code, Fairview Web Team
