--- a/web.html
+++ b/web.html
@@ -8,14 +8,20 @@ permalink: /web/
 
 <div class="gallery-x">
 
-  <div class="gallery-row" style="display: none;">
-    <div class="gallery-journal-supplies-co gallery-item">
+  <div class="gallery-row">
+    <div class="gallery-jsc gallery-item">
       <div class="gallery-item-slide">
         <p>Ecommerce website for stationery vendor Journal Supplies Co</p>
-        <a href="">See More</a>
+        <a href="{{ site.url }}/web/jsc">See More</a>
       </div>
     </div>
-    <div class="gallery-fairviewhs gallery-item">
+    <div class="gallery-ddcc gallery-item">
+      <div class="gallery-item-slide">
+        <p>Doki Doki Code Club Promotional Site</p>
+        <a href="http://ddcc.gernene.com" target="_blank">See Site</a>
+      </div>
+    </div>
+    <div class="gallery-fairviewhs gallery-item" style="opacity:0;">
       <div class="gallery-item-slide">
         <p>Responsive redesign for Fairview High School</p>
         <a href="">See More</a>
