--- a/about.html
+++ b/about.html
@@ -25,12 +25,8 @@ permalink: /about/
 
 <p>
   Today, my goal is to develop my design, technical, and business skillsets to
-  maximize the quality of my work and the efficiency of my service. A learning
-  student, I'm always on the lookout for new opportunities that pass my way. Do
-  take a look around my portfolio and ask any questions...
+  maximize the quality of my work and the efficiency of my service. In addition to programming and art, I indulge in creative writing and caterpillars!
 </p>
-
-<p>And remember me when you hunt for your next web designer!</p>
 
 </div>
 
