--- a/index.html
+++ b/index.html
@@ -20,36 +20,44 @@ permalink: //
   </div>
   <div id="intro-right">
     <div>
-      I help individuals and organizations build effective, intuitive, and beautiful websites.
+      A passionate full-stack developer and designer.<br>
+      Crafting intuitive apps using code and creativity.
     </div>
-    <a class="btn" href="{{ site.url }}/contact">Let's Get Started!</a>
+    <a class="btn" href="{{ site.url }}/contact">I Can Help</a>
   </div>
 </div>
-
-<div class="gallery-x">
-  <div class="gallery-row">
-    <div class="gallery-ogb gallery-item">
-      <div class="gallery-item-slide">
-        <p>
-          Logo, graphics, and website for Operation Give Back: A student
-          volunteer match site
-        </p>
-        <a href="{{ site.url }}/web/ogb">See More</a>
+<div class="features">
+  <a class="feature" href="/">
+    <div class="feature-img"></div>
+    <div class="feature-info">
+      <div class="feature-info-top">
+      <h4>Fairview High School</h4>
+      <p>Full-stack development + responsive redesign for a school website. (Ruby on Rails)</p>
+      </div>
+      <div class="feature-call">
+        See Project
+        <div class="feature-arrow"></div>
       </div>
     </div>
-    <div class="gallery-just-tangerine-2017 gallery-item">
-      <div class="gallery-item-slide">
-        <p>Website for Just Tangerine (2017)</p>
-        <a href="{{ site.url }}/web/just-tangerine-2017">See More</a>
+  </a>
+  <a class="feature" href="/">
+    <div class="feature-img"></div>
+    <div class="feature-info">
+        <div class="feature-info-top">
+      <h4>Fairview High School</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+      <div class="feature-call">
+        See Project
+        <div class="feature-arrow"></div>
       </div>
     </div>
-    <div class="gallery-solisles gallery-item">
-      <div class="gallery-item-slide">
-        <p>Art, features, and content for virtual pet site Solisles</p>
-        <a href="{{ site.url }}/web/solisles">See More</a>
-      </div>
-    </div>
-  </div>
+  </a>
+  {% include feature.html 
+    title="Title" 
+    desc="Desc" 
+    img="web/thumb/solisles-home.jpg" 
+  %}
 </div>
 
 <div id="index-about">
@@ -59,11 +67,9 @@ permalink: //
     <div class="animation-element"></div>
     <div class="animation-element"></div>
   </div>
-  I'm a passionate student who currently resides in beautiful Boulder, Colorado.
-  I seek to combine my skills in coding, art, and copywriting to help my clients
-  reach their audience. While I'm a full-stack developer, front-end work and
-  web design are my specialties. Need a website, new feature, or graphics? Contact
-  me - I would love to work together!
+  <p>
+    An interdisciplinary software engineer and designer with a specialty in UI/UX. My goal is to marry computer science and the arts to improve the way people experience a digital world. I use my versatile skill set to explore web design, games, graphics, and more. Like my work or want to chat? Let me know!
+  </p>
   <div id="index-links">
     <a href="{{ site.url }}/web">Web Projects<div></div></a>
     <a href="{{ site.url }}/art">Graphics and Art<div></div></a>
