Finish fhs case study

--- a/index.html
+++ b/index.html
@@ -26,36 +26,10 @@ permalink: //
   </div>
 </div>
 <div class="features">
-  <a class="feature" href="/">
-    <div class="feature-img"></div>
-    <div class="feature-info">
-      <div class="feature-info-top">
-      <h4>Fairview High School</h4>
-      <p>Full-stack development + responsive redesign for a school website. (Ruby on Rails)</p>
-      </div>
-      <div class="feature-call">
-        See Project
-        <div class="feature-arrow"></div>
-      </div>
-    </div>
-  </a>
-  <a class="feature" href="/">
-    <div class="feature-img"></div>
-    <div class="feature-info">
-        <div class="feature-info-top">
-      <h4>Fairview High School</h4>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      </div>
-      <div class="feature-call">
-        See Project
-        <div class="feature-arrow"></div>
-      </div>
-    </div>
-  </a>
   {% include feature.html 
-    title="Title" 
-    desc="Desc" 
-    img="web/thumb/solisles-home.jpg" 
+    title="Fairview High School" 
+    desc="Redesigning a high school website for responsive." 
+    img="projects/fhs/thumb.jpg" 
   %}
 </div>
 
