--- a/contact.html
+++ b/contact.html
@@ -8,133 +8,8 @@ permalink: /contact/
 <div id="contact-info">
   <h1>Contact</h1>
   <p>
-    Have a project you want to discuss? Tell me a little about your goals - I
-    might just have a solution for you!
+    Nice to meet you! Please let me know if you have any questions, concerns, or just want to talk!
   </p>
-
-<div>
-  <h2>
-    <div>My Design Process</div>
-    <div></div>
-  </h2>
-
-<div class="list-item-cont">
-
-  <div class="list-item">
-    <div>1</div>
-    <div>
-      <h3>Getting to Know You</h3>
-      <p>
-        I'll ask about your needs and constraints. This will
-        help me understand your business and reflect your purpose and
-        brand.
-      </p>
-    </div>
-  </div>
-
-  <div class="list-item">
-    <div>2</div>
-    <div>
-      <h3>Proposal & Samples</h3>
-      <p>
-        Want a visualization before you commit to a project? I'll whip up a
-        sketch, wireframe, or simple mock-up at no extra charge.
-      </p>
-    </div>
-  </div>
-
-  <div class="list-item">
-    <div>3</div>
-    <div>
-      <h3>Sorting Out the Details</h3>
-      <p>
-        We'll agree on the project, schedule, platform/methods, terms, and
-        payment.
-      </p>
-    </div>
-  </div>
-
-  <div class="list-item">
-    <div>4</div>
-    <div>
-      <h3>*Sparks Fly Everywhere*</h3>
-      <p>
-        I'll use the information you give me to build something special. During
-        this time, we'll maintain regular correspondence so we can both stay
-        up-to-date and make necessary adjustments.
-      </p>
-    </div>
-  </div>
-
-  <div class="list-item">
-    <div>5</div>
-    <div>
-      <h3>TADA!</h3>
-      <p>
-        Once you give me your final approval, the finished product is yours! I'll
-        also be happy to provide a separate estimate for additional add-ons.
-      </p>
-    </div>
-  </div>
-
-</div>
-
-</div>
-
-<div>
-  <h2>
-    <div>Standard Policy</div>
-    <div></div>
-  </h2>
-
-<div class="list-item-cont">
-
-  <div class="list-item">
-    <div>1</div>
-    <div>
-      <p>
-        Before I begin work, I'll need you to consent to my standard policies
-        and client-specific service agreement.
-      </p>
-    </div>
-  </div>
-
-  <div class="list-item">
-    <div>2</div>
-    <div>
-      <p>I request an initial non-refundable deposit.</p>
-    </div>
-  </div>
-
-  <div class="list-item">
-    <div>3</div>
-    <div>
-      <p>All payments are non-refundable after final approval.</p>
-    </div>
-  </div>
-
-  <div class="list-item">
-    <div>4</div>
-    <div>
-      <p>
-        I reserve the right to promote all work as my own through my portfolio,
-        social media, and any other platform.
-      </p>
-    </div>
-  </div>
-
-  <div class="list-item">
-    <div>5</div>
-    <div>
-      <p>
-        I cannot be held liable for third party damages and cannot guarantee an
-        increase in any business prospects.
-      </p>
-    </div>
-  </div>
-
-</div>
-</div>
 
 </div>
 
