--- a/index.html
+++ b/index.html
@@ -25,13 +25,7 @@ permalink: //
     <a class="btn" href="{{ site.url }}/contact">I Can Help</a>
   </div>
 </div>
-<div class="features">
-  {% include feature.html 
-    title="Fairview High School" 
-    desc="Redesigning a high school website for responsive." 
-    img="projects/fhs/thumb.jpg" 
-  %}
-</div>
+{% include features1.html %}
 
 <div id="index-about">
   <div id="index-mountains">
