--- a/projects/fhs.html
+++ b/projects/fhs.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Fairview Girls Who Code
+title: Fairview High School
 permalink: /projects/fhs/
 counselingWireframes:
   - img/projects/fhs/counseling-wires/home.jpg
@@ -19,7 +19,7 @@ counselingWireframes:
         <div class="project-summary">
             <h1>Fairview High School</h1>
             <p>
-                I led a <b>responsive redesign</b> and content restructure of Fairview High School’s website to provide an intuitive experience for students, staff, and parents to find information and manage their content. 
+                I led a <b>responsive redesign</b> and content restructure of Fairview High School’s website to provide an intuitive way for students, staff, and parents to find information and manage their content. 
             </p>
         </div>
         <div class="project-details">
@@ -36,7 +36,7 @@ counselingWireframes:
     </div>
 </div>
     
-<img class="project-hero" src="{{ site.url }}/img/projects/fhs/overview.jpg" alt="Fairview High School Website Redesign">
+<img class="project-hero" src="{{ site.url }}/img/projects/fhs/overview.jpg" alt="Fairview High School Website Redesign" title="Fairview High School Website Redesign">
 <div class="project">
 
     <div class="accordion expand">
@@ -63,10 +63,10 @@ counselingWireframes:
                 </li>
             </ol>
             <div class="project-old">
-                <img src="{{ site.url }}/img/projects/fhs/old-desktop.png">
-                <img src="{{ site.url }}/img/projects/fhs/old-mobile.png">
-                <img src="{{ site.url }}/img/projects/fhs/old-counseling.png">
-                <img src="{{ site.url }}/img/projects/fhs/old-cms.png">
+                <img src="{{ site.url }}/img/projects/fhs/old-desktop.png" alt="Original Non-Responsive Desktop Site" title="Original Non-Responsive Desktop Site">
+                <img src="{{ site.url }}/img/projects/fhs/old-mobile.png" alt="Original Mobile Site" title="Original Mobile Site">
+                <img src="{{ site.url }}/img/projects/fhs/old-counseling.png" alt="Counseling Site" title="Counseling Site">
+                <img src="{{ site.url }}/img/projects/fhs/old-cms.png" alt="Original CMS" title="Original CMS">
             </div>
         </div>
     </div>
@@ -112,14 +112,14 @@ counselingWireframes:
             <p class="project-p">
                 In 2016, I helped Web Team prepare various mockups in anticipation of a purely visual redesign. These mockups were reviewed by other team members and adjusted according to their feedback.
             </p>
-            <img class="project-mockups" src="{{ site.url }}/img/projects/fhs/visual-mockups.png">
+            <img class="project-mockups" src="{{ site.url }}/img/projects/fhs/visual-mockups.png" alt="Visual Mockups" title="Visual Mockups">
             <div class="project-l">
                 <div class="project-l-content">
                     <p>
                         Development of the new UI took place over several months. In 2017, Web Team revealed the new design for beta testing. We collected feedback from staff and students through surveys and personal interviews.
                     </p>
                 </div>
-                <img class="project-l-preview" src="{{ site.url }}/img/projects/fhs/redesign1.jpg">
+                <img class="project-l-preview" src="{{ site.url }}/img/projects/fhs/redesign1.jpg" alt="Redesign BETA" title="Redesign BETA">
             </div>
             <h3>Content Restructure</h3>
             <div class="project-l">
@@ -144,17 +144,17 @@ counselingWireframes:
             </p>
             
             <div class="restructure-sketches">
-                <img src="{{ site.url }}/img/projects/fhs/restructure-sketch-1.jpg">
-                <img src="{{ site.url }}/img/projects/fhs/restructure-sketch-2.jpg">
-                <img src="{{ site.url }}/img/projects/fhs/restructure-sketch-3.jpg">
-                <img src="{{ site.url }}/img/projects/fhs/restructure-sketch-4.jpg">
+                <img src="{{ site.url }}/img/projects/fhs/restructure-sketch-1.jpg" alt="Mockup Sketch" title="Mockup Sketch">
+                <img src="{{ site.url }}/img/projects/fhs/restructure-sketch-2.jpg" alt="Mockup Sketch" title="Mockup Sketch">
+                <img src="{{ site.url }}/img/projects/fhs/restructure-sketch-3.jpg" alt="Mockup Sketch" title="Mockup Sketch">
+                <img src="{{ site.url }}/img/projects/fhs/restructure-sketch-4.jpg" alt="Mockup Sketch" title="Mockup Sketch">
             </div>
 
             <h3>Simplifying Content Management</h3>
             <p class="project-p">
-                After multiple discussions, the team decided to build a “templating” system for counseling. Editors could contribute to integration efforts by reformatting old content using pre-made responsive templates. We also made significant stylistic changes to accomodate the content overhaul.
+                After multiple discussions, the team decided to build a “templating” system for counseling. Editors could contribute to integration efforts by reformatting old content using pre-made responsive templates.
             </p>
-            <img class="cms-sketch" src="{{ site.url }}/img/projects/fhs/cms-sketch.jpg">
+            <img class="cms-sketch" src="{{ site.url }}/img/projects/fhs/cms-sketch.jpg" alt="CMS Planning" title="CMS Planning">
             <p class="project-p">
                 When the team proposed the templating system to Fairview’s counseling editors, we learned that the number of editors knowledgeable in HTML and CSS had decreased over time. The current CMS (and by extension, the templating system) were too complicated for the existing volunteers to operate. The situation forced my team to consider alternatives.
             </p>
@@ -170,7 +170,7 @@ counselingWireframes:
             <p class="project-p">
                 Web Team decided to release the responsive redesign and most structural changes in March 2019. We presented Fairview's website editors a CMS GUI to aid the restructuring process and allow them to manage content more efficiently. Due to time constraints, the GUI currently exists as a separate application from the rest of the site but will be integrated in the near future.
             </p>
-            <img class="project-solution" src="{{ site.url }}/img/projects/fhs/solution.jpg">
+            <img class="project-solution" src="{{ site.url }}/img/projects/fhs/solution.jpg" alt="Project Mockups" title="Project Mockups">
         </div>
     </div>
 
