--- a/resume.html
+++ b/resume.html
@@ -15,9 +15,7 @@ permalink: /resume/
 <p>gernenetan@gmail.com</p>
 
 <p>
-  Hardworking and passionate student with a knack for learning new things.
-  Seeking to harness my creativity and artistic skills in a web development or
-  design project. Hoping to utilize my unique skill set to help make something great!
+  Passionate full-stack designer/developer with a knack for learning new things. Hoping to utilize my interdisciplinary skill set to help make something great!
 </p>
 
 <h2>Experience & Projects</h2>
