--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ permalink: //
     An interdisciplinary software engineer and designer with a specialty in UI/UX. My goal is to marry computer science and the arts to improve the way people experience a digital world. I use my versatile skill set to explore web design, games, graphics, and more. Like my work or want to chat? Let me know!
   </p>
   <div id="index-links">
-    <a href="{{ site.url }}/web">Web Projects<div></div></a>
-    <a href="{{ site.url }}/art">Graphics and Art<div></div></a>
+    <a href="{{ site.url }}/projects">All Projects<div></div></a>
+    <a href="{{ site.url }}/resume">Resume<div></div></a>
     <a href="{{ site.url }}/contact">Get in Touch!<div></div></a>
   </div>
 </div>
