Update jsc case study

--- a/index.html
+++ b/index.html
@@ -27,6 +27,50 @@ permalink: //
 </div>
 {% include features1.html %}
 
+<div class="index-skills">
+  <h2>Skills & Technologies</h2>
+  {% include index-skill.html
+    name="NodeJS"
+    color="#519b23"
+  %}
+  {% include index-skill.html
+    name="React"
+    color="#009edd"
+  %}
+  {% include index-skill.html
+    name="Ruby on Rails"
+    color="#ba1f46"
+  %}
+  {% include index-skill.html
+    name="HTML"
+    color="#ef8002"
+  %}
+  {% include index-skill.html
+    name="CSS"
+    color="#0176a0"
+  %}
+  {% include index-skill.html
+    name="Python"
+    color="#e0a800"
+  %}
+  {% include index-skill.html
+    name="Java"
+    color="#d62a2a"
+  %}
+  {% include index-skill.html
+    name="Shopify"
+    color="#75379b"
+  %}
+  {% include index-skill.html
+    name="PHP"
+    color="#4d6da0"
+  %}
+  {% include index-skill.html
+    name="C++"
+    color="#e2e2e2"
+  %}
+</div>
+
 <div id="index-about">
   <div id="index-mountains">
     <div class="animation-element"></div>
@@ -35,7 +79,27 @@ permalink: //
     <div class="animation-element"></div>
   </div>
   <p>
-    An interdisciplinary software engineer and designer with a specialty in UI/UX. My goal is to marry computer science and the arts to improve the way people experience a digital world. I use my versatile skill set to explore web design, games, graphics, and more. Like my work or want to chat? Let me know!
+    An interdisciplinary software engineer and designer with a specialty in UI/UX. I use my versatile skill set to approach problems with:
+  </p>
+  <ul>
+    <li>
+      A broad understanding of context and constraints
+    </li>
+    <li>
+      Role flexibility
+    </li>
+    <li>
+      Aptitude for rapid learning
+    </li>
+    <li>
+      Experience reconciling conflicting design/technical/logistical concerns
+    </li>
+    <li>
+      The know-how to produce solutions
+    </li>
+  </ul>
+  <p>
+    My goal is to marry computer science and the arts to improve the way people experience a digital world. Like my work or want to chat? Let me know!
   </p>
   <div id="index-links">
     <a href="{{ site.url }}/projects">All Projects<div></div></a>
