--- a/projects/jsc.html
+++ b/projects/jsc.html
@@ -85,6 +85,14 @@ permalink: /projects/jsc/
             <p class="project-p">
                 After determining the goals and criteria for the project, I made several sketches to visualize possible interface designs. I sought to incorporate elements that reflected the client’s brand and the “analog” and “artsy” nature of their goods. The design would include simple watercolor and highlighting animations reminiscent of the work the client used their products to create.
             </p>
+            <div class="sketches">
+                <img src="{{ site.url }}/img/projects/jsc/sketch1.jpg" class="sketch">
+                <img src="{{ site.url }}/img/projects/jsc/sketch2.jpg" class="sketch">
+                <img src="{{ site.url }}/img/projects/jsc/sketch3.jpg" class="sketch">
+                <img src="{{ site.url }}/img/projects/jsc/sketch4.jpg" class="sketch">
+                <img src="{{ site.url }}/img/projects/jsc/sketch5.jpg" class="sketch">
+                <img src="{{ site.url }}/img/projects/jsc/sketch6.jpg" class="sketch">
+            </div>
             <p class="project-p">
                 Developing the application took a significant amount of time due to the extensive functionality. The admin control panel (ACP) was particularly complex. As the client was selling numerous products, it was necessary to make the product management system as efficient as possible. 
             </p>
@@ -131,12 +139,12 @@ permalink: /projects/jsc/
 <style>
 
     .project-old,
-    .restructure-sketches {
+    .sketches {
         margin: 3rem 0;
         text-align: center;
     }
 
-    .restructure-sketches img {
+    .sketches img {
         border-radius: .5rem;
         display: inline-block;
         margin: 0 .5rem 1rem .5rem;
@@ -144,7 +152,7 @@ permalink: /projects/jsc/
         max-width: 100%;
     }
     @media only screen and (max-width: 400px) {
-        .restructure-sketches img {
+        .sketches img {
             margin: 0 0 .5rem 0;
         }
 
