--- a/about.html
+++ b/about.html
@@ -6,28 +6,22 @@ permalink: /about/
 
 <div id="about">
 
-<h1>About Gernene</h1>
+  <img src="{{ site.url }}/img/gernene.jpg">
+  
+  <div class="about-cont">
 
-<p>
-  Hi there! My name is Gernene Tan. You may also recognize me as Hwona (my pen
-  name). I combine computer science with aesthetic appeal to create innovative 
-  projects and solutions.
-</p>
+    <h1>About Gernene</h1>
 
-<p>
-  As a young girl, I was fascinated by the idea of utilizing code to add
-  a whole new layer of depth and interaction to my artistic creations. I have
-  since worked with HTML/CSS, PHP and MySQL, Javascript, Ruby on Rails, Python,
-  and Java - Not to mention that I continue to learn more! My various projects
-  range from simple static pages to full-blown ecommerce sites, giving me a wide
-  range of experience with different programming languages, tools, and platforms.
-</p>
-
-<p>
-  Today, my goal is to develop my design, technical, and business skillsets to
-  maximize the quality of my work and the efficiency of my service. In addition to programming and art, I indulge in creative writing and caterpillars!
-</p>
-
+    <p>
+      Hi there! My name is Gernene Tan. I combine computer science with aesthetic appeal to create innovative products.
+    </p>
+    <p>
+      I became interested in computing and design when I was young. I loved online game graphics and taught myself basic programming and digital art when I discovered that I could make my own.
+    </p>
+    <p>
+      Over the years, I've developed projects ranging from simple static sites to full-blown ecommerce apps. In my free time, I enjoy creative writing, illustration, and caterpillars! 
+    </p>
+  </div>
 </div>
 
 <div id="about-definitions">
