Tweak media kit

--- a/mediakit.html
+++ b/mediakit.html
@@ -2,9 +2,6 @@
 permalink: /mediakit/
 ---
 
-<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Poppins:300,300i,700" rel="stylesheet">
-<script src="https://unpkg.com/feather-icons"></script>
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <table class="gernene-siggy">
     <tr>
@@ -40,11 +37,8 @@ permalink: /mediakit/
 </table>
 <style>
     .gernene-siggy {
-        align-items: flex-start;
-        border-radius: .8rem;
-        box-shadow: .1rem .1rem .4rem .05rem rgba(0, 0, 0, .3);
         display: block;
-        font-family: "Poppins", sans-serif;
+        font-family: sans-serif;
         margin: .5rem;
         padding: .8rem;
     }
@@ -68,9 +62,6 @@ permalink: /mediakit/
         font-weight: bold;
         transition: all .4s ease;
     }
-    .gernene-siggy-web:hover {
-        color: #FF8D49;
-    }
 
     .gernene-siggy-links {
         font-size: 1.4rem;
@@ -78,12 +69,7 @@ permalink: /mediakit/
     }
 
     .gernene-siggy-links a {
-        margin: 0 .3rem 0 0;
         text-decoration: none;
-        transition: all .4s ease;
-    }
-    .gernene-siggy-links a:hover {
-        opacity: .6;
     }
 
     .gernene-siggy-links a img {
